--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [metadata]
-
 name = fable-circuits
-version = 1.0
+version = 0.1
 author = Daan Camps
 author_email = daancamps@gmail.com
 description = Fast Approximate Block Encoding Circuits
@@ -18,10 +17,12 @@ Operating System :: OS Independent
 
 [options]
 package_dir =
-= py
-
+   = py
 packages = find:
 python_requires = >=3.6
 install_requires =
-   numpy
-   qiskit
+   qiskit>=0.19.1
+   numpy>=1.20.3
+
+[options.packages.find]
+where = py
